argocd/network/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: metallb-pool-reserved
    metallb.universe.tf/ip-allocated-from-pool: metallb-pool-reserved
  name: adguard-dns
  namespace: adguard
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.10.20.205
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-over-tls
    port: 853
    protocol: TCP
    targetPort: 853
  - name: dns-over-quic
    port: 784
    protocol: UDP
    targetPort: 784
  selector:
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/name: adguard-home
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.10.20.205
