argocd/network/adguard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.bowmans.site`)
      kind: Rule
      services:
      - name: adguard-adguard-home
        port: 80
  tls:
    secretName: adguard-certificate
